--- a/html/index.html
+++ b/html/index.html
@@ -4,13 +4,12 @@
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <meta http-equiv="Content-Security-Policy" content="default-src 'self'; script-src 'self' 'unsafe-inline' https://code.jquery.com https://cdnjs.cloudflare.com; style-src 'self' 'unsafe-inline'; img-src 'self' data: https://steveh4wk.github.io; font-src 'self'; connect-src 'self';">
         <script src="https://code.jquery.com/jquery-3.6.0.js" integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk=" crossorigin="anonymous"></script>
         <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.12.1/jquery-ui.min.js"></script>
         <script type="text/javascript" src="turn.min.js"></script>
         <script src="index.js"></script>
         <link rel="stylesheet" href="index.css">
-        <title>FiveM Book Demo</title>
+        <title>Steve Annuario Astral</title>
     </head>
 
     <body>
@@ -38,7 +37,7 @@
         
         <!-- Contenitore per testo copertina -->
         <div id="testo-copertina" class="copertina-testo" style="display: none;">
-            DEMO<br>BOOK
+            ANNUARIO<br>SCOLASTICO<br>2005
         </div>
         
         <!-- Test per visualizzazione diretta -->
@@ -47,18 +46,21 @@
             setTimeout(() => {
                 window.postMessage({
                     show: true,
-                    book: 'demo_book',
+                    book: 'annuario_scolastico_2005',
                     pages: [
-                        { pageName: "copertina", type: 'hard', source: 'local' },
-                        { pageName: "1", type: 'hard', source: 'local' },
-                        { pageName: "2", type: 'normal', source: 'local' },
-                        { pageName: "3", type: 'normal', source: 'local' },
-                        { pageName: "4", type: 'normal', source: 'local' },
-                        { pageName: "5", type: 'normal', source: 'local' },
-                        { pageName: "6", type: 'hard', source: 'local' },
-                        { pageName: "copertina_posteriore", type: 'hard', source: 'local' }
+                        { pageName: "COPERTINA", type: 'hard', source: 'local' },
+                        { pageName: "PAGINA_1", type: 'normal', source: 'local' },
+                        { pageName: "PAGINA_VUOTA", type: 'normal', source: 'local' },
+                        { pageName: "PAGINA_VUOTA", type: 'normal', source: 'local' },
+                        { pageName: "PAGINA_VUOTA", type: 'normal', source: 'local' },
+                        { pageName: "PAGINA_VUOTA", type: 'normal', source: 'local' },
+                        { pageName: "PAGINA_VUOTA", type: 'normal', source: 'local' },
+                        { pageName: "PAGINA_VUOTA", type: 'normal', source: 'local' },
+                        { pageName: "PAGINA_VUOTA", type: 'normal', source: 'local' },
+                        { pageName: "PAGINA_VUOTA", type: 'normal', source: 'local' },
+                        { pageName: "COPERTINA_END", type: 'hard', source: 'local' }
                     ],
-                    size: { width: 800, height: 600 },
+                    size: { width: 720, height: 600 },
                     discordChannelId: "TEST_CHANNEL_ID"
                 }, '*');
             }, 500);
