--- a/html/test.html
+++ b/html/test.html
@@ -9,7 +9,7 @@
         <script type="text/javascript" src="turn.min.js"></script>
         <script src="index.js"></script>
         <link rel="stylesheet" href="index.css">
-        <title>Steve Annuario Astral</title>
+        <title>Test Debug COPERTINA_END</title>
     </head>
 
     <body>
